Mon Mar 29 12:18:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Sender/Latency_Sender.cpp:
          Use more ACE_UINT64 to avoid truncations

Mon Mar 29 12:03:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/tests/IDL_Test/AMI4CCM_IDLTest.mpc:
          Added several projects

        * connectors/ami4ccm/examples/Hello/Base/Hello.mpc:
          Added another export macro

Mon Mar 29 10:33:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/tests/IDL_Test/Hello.idl:
          Fixed this MPC file

Mon Mar 29 10:15:13 UTC 2010  Martin Corino <mcorino@remedy.nl>

        * tools/Completion/Completion_Counter_Base.h:
        * tools/Completion/Completion_Counter_Base.inl:
          Fix compile warnings concerning non-virtual destructor.

Fri Mar 26 15:50:27 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/Getter_T.h:
          Changed doxygen documentation.

        * connectors/dds4ccm/impl/dds/Reader_T.h:
          Added doxygen documentation.

Fri Mar 26 13:03:58 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/Getter_T.cpp:
          Removed unnecessary code.

Fri Mar 26 12:20:07 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/SharedDomainParticipant/SameDatatype/Component/Component.idl:
        * connectors/dds4ccm/tests/SharedDomainParticipant/SameDatatype/Component/Component_exec.h:
        * connectors/dds4ccm/tests/SharedDomainParticipant/SameDatatype/Component/Component_exec.cpp:
        * connectors/dds4ccm/tests/SharedDomainParticipant/SameDatatype/descriptors/Plan.cdp:
          Added extra component and connector in order to detect runtime errors during shutdown.
          The shutdown errors which occured were related to the implementation of topic reuse
          in the dds4ccm connector.
